--- a/index.html
+++ b/index.html
@@ -1,54 +1,62 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <title>Cek Blob Walrus dari Address/Public Key</title>
-    <script src="https://cdn.jsdelivr.net/npm/blakejs@1.2.1/blake2b.min.js"></script>
-    <style>
-        body { font-family: Arial, sans-serif; padding: 20px; background: #f4f4f4; }
-        input { width: 500px; padding: 5px; }
-        button { padding: 6px 12px; }
-        table { border-collapse: collapse; margin-top: 20px; width: 100%; background: white; }
-        th, td { border: 1px solid #ddd; padding: 8px; }
-        th { background: #333; color: white; }
-    </style>
+<meta charset="UTF-8">
+<title>Cek Blob Walrus dari Public Key atau Address</title>
+<script src="https://cdn.jsdelivr.net/npm/blakejs@1.2.1/blake2b.min.js"></script>
+<style>
+    body { font-family: Arial, sans-serif; padding: 20px; background: #f9f9f9; }
+    input { width: 450px; padding: 8px; }
+    button { padding: 8px 14px; margin-left: 5px; }
+    table { border-collapse: collapse; width: 100%; margin-top: 20px; background: white; }
+    th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
+    th { background: #333; color: white; }
+    #status { margin-top: 15px; font-weight: bold; }
+</style>
 </head>
 <body>
-    <h2>Cek Blob Walrus dari Address atau Public Key Sui</h2>
-    <input type="text" id="inputValue" placeholder="Paste address atau public key Base64 di sini">
-    <button onclick="cekBlob()">Cek</button>
-    <div id="status"></div>
-    <table id="resultTable">
-        <thead>
-            <tr>
-                <th>Blob Base64</th>
-                <th>Waktu Dibuat</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
+<h2>Cek Blob Walrus dari Public Key atau Address</h2>
+<p>Masukkan <b>public key Base64</b> atau <b>address Sui</b>.</p>
+<input type="text" id="inputValue" placeholder="Public key atau address Sui">
+<button onclick="cekBlob()">Cek</button>
+<div id="status"></div>
+
+<table id="resultTable" style="display:none;">
+    <thead>
+        <tr>
+            <th>Blob Base64</th>
+            <th>Waktu Dibuat</th>
+        </tr>
+    </thead>
+    <tbody></tbody>
+</table>
 
 <script>
 async function cekBlob() {
     let val = document.getElementById('inputValue').value.trim();
     if (!val) {
-        alert("Masukkan address atau public key!");
+        alert("Masukkan public key atau address Sui!");
         return;
     }
 
+    document.getElementById('status').innerText = "⏳ Mengonversi / Mengambil data...";
+    document.getElementById('resultTable').style.display = "none";
+
     let address = val;
-    // Deteksi jika input adalah public key (Base64, panjang biasanya < 60)
+
+    // Jika bukan address (0x...), berarti public key → konversi
     if (!val.startsWith("0x")) {
         try {
             address = publicKeyToSuiAddress(val);
-            console.log("Public key dikonversi ke address:", address);
+            document.getElementById('status').innerText = "✅ Public key berhasil dikonversi ke address: " + address;
         } catch (e) {
-            alert("Public key tidak valid!");
+            document.getElementById('status').innerText = "❌ Public key tidak valid!";
             return;
         }
+    } else {
+        document.getElementById('status').innerText = "✅ Menggunakan address: " + address;
     }
 
-    document.getElementById('status').innerText = "Mengambil data blob...";
     let apiKey = "39Ki3kPJFMJ9eukD5yrpWJkNWX7Qm1";
     let url = `https://api.blockberry.one/walrus-mainnet/v1/blobs/accounts/${address}?page=0&size=20&orderBy=DESC&sortBy=TIMESTAMP`;
 
@@ -60,50 +68,49 @@ async function cekBlob() {
             }
         });
         if (!res.ok) {
-            document.getElementById('status').innerText = `HTTP ${res.status}: ${res.statusText}`;
+            document.getElementById('status').innerText = `❌ HTTP ${res.status}: ${res.statusText}`;
             return;
         }
         let data = await res.json();
         tampilkanData(data.content);
     } catch (err) {
         console.error(err);
-        document.getElementById('status').innerText = "Gagal mengambil data!";
+        document.getElementById('status').innerText = "❌ Gagal mengambil data!";
     }
 }
 
 function tampilkanData(content) {
-    document.getElementById('status').innerText = "";
     let tbody = document.querySelector("#resultTable tbody");
     tbody.innerHTML = "";
     if (!content || content.length === 0) {
         tbody.innerHTML = "<tr><td colspan='2'>Tidak ada blob ditemukan</td></tr>";
-        return;
+    } else {
+        content.forEach(item => {
+            let tr = document.createElement("tr");
+
+            let tdBlob = document.createElement("td");
+            let a = document.createElement("a");
+            a.href = "#";
+            a.innerText = item.blobIdBase64;
+            a.onclick = () => { navigator.clipboard.writeText(item.blobBase64); alert("BlobBase64 disalin!"); return false; };
+            tdBlob.appendChild(a);
+
+            let tdTime = document.createElement("td");
+            let date = new Date(item.timestamp / 1_000_000).toLocaleString();
+            tdTime.innerText = date;
+
+            tr.appendChild(tdBlob);
+            tr.appendChild(tdTime);
+            tbody.appendChild(tr);
+        });
     }
-    content.forEach(item => {
-        let tr = document.createElement("tr");
-        let tdBlob = document.createElement("td");
-        let tdTime = document.createElement("td");
-
-        let a = document.createElement("a");
-        a.href = "#";
-        a.innerText = item.blobIdBase64;
-        a.onclick = () => { navigator.clipboard.writeText(item.blobBase64); alert("BlobBase64 disalin!"); return false; };
-        tdBlob.appendChild(a);
-
-        let date = new Date(item.timestamp / 1_000_000).toLocaleString();
-        tdTime.innerText = date;
-
-        tr.appendChild(tdBlob);
-        tr.appendChild(tdTime);
-        tbody.appendChild(tr);
-    });
+    document.getElementById('resultTable').style.display = "table";
 }
 
-// Konversi public key base64 → address Sui
 function publicKeyToSuiAddress(base64Key) {
     const publicKeyBytes = Uint8Array.from(atob(base64Key), c => c.charCodeAt(0));
     const prefixed = new Uint8Array(publicKeyBytes.length + 1);
-    prefixed[0] = 0x00;
+    prefixed[0] = 0x00; // ed25519 flag
     prefixed.set(publicKeyBytes, 1);
     const hash = blake2b(prefixed, null, 32);
     return "0x" + Array.from(hash).map(b => b.toString(16).padStart(2, '0')).join('');
