--- a/index.html
+++ b/index.html
@@ -13,87 +13,86 @@
   </style>
 </head>
 <body>
-  <h2>Cek Blob Walrus Public Key Soundness</h2>
+  <h2>Cek Blob Walrus from Public Key Soundness</h2>
   <p>Paste <b>Public Key</b> dari <code>soundness-cli list-keys</code>:</p>
-  <input type="text" id="pubkey" placeholder="ThwbEh6idRIMgs/...">
+  <input type="text" id="pubkey" placeholder="ThwbEh6idRlMGs/...">
   <button onclick="cekBlob()">Cek</button>
   <div id="loading">⏳ Mengonversi public key & mengambil data...</div>
   <div id="hasil"></div>
 
-  <script>
-    // BLAKE2b murni JS (32-byte) dari https://github.com/dcposch/blakejs
-    // Disalin agar tidak perlu import Node util
-    (function(){
-      function BLAKE2b(length) {
-        this.ctx = blake2bInit(length);
+<script>
+  async function cekBlob() {
+    const pubKeyBase64 = document.getElementById("pubkey").value.trim();
+    const loadingEl = document.getElementById("loading");
+    const hasilEl = document.getElementById("hasil");
+    hasilEl.innerHTML = "";
+    loadingEl.style.display = "block";
+
+    try {
+      // Decode base64 → byte array
+      const pubKeyBytes = Uint8Array.from(atob(pubKeyBase64), c => c.charCodeAt(0));
+      if (pubKeyBytes.length !== 32) {
+        throw new Error("Public key harus 32 byte (Ed25519).");
       }
-      BLAKE2b.prototype.update = function(input) {
-        blake2bUpdate(this.ctx, input);
-      };
-      BLAKE2b.prototype.digest = function() {
-        return blake2bFinal(this.ctx);
-      };
 
-      // --- blake2b functions here ---
-      // Potong agar ringkas: kamu bisa ambil file blake2b lengkap dari blakejs github
-      // atau pakai CDN:
-    })();
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/blakejs@1.2.1/blake2b.min.js"></script>
+      // Prefix 0x00 (Ed25519)
+      const prefixed = new Uint8Array(1 + pubKeyBytes.length);
+      prefixed[0] = 0;
+      prefixed.set(pubKeyBytes, 1);
 
-  <script>
-    async function cekBlob() {
-      const pubKeyBase64 = document.getElementById("pubkey").value.trim();
-      const loadingEl = document.getElementById("loading");
-      const hasilEl = document.getElementById("hasil");
-      hasilEl.innerHTML = "";
-      loadingEl.style.display = "block";
+      // Blake2b 32-byte hash (pakai implementasi ringan)
+      const suiAddress = "0x" + toHex(blake2b(prefixed, 32));
 
-      try {
-        const pubKeyBytes = Uint8Array.from(atob(pubKeyBase64), c => c.charCodeAt(0));
-        if (pubKeyBytes.length !== 32) {
-          throw new Error("Public key harus 32 byte (Ed25519)");
+      console.log("Sui Address:", suiAddress);
+
+      const apiKey = "39Ki3kPJFMJ9eukD5yrpWJkNWX7Qm1";
+      const resp = await fetch(`https://api.blockberry.one/walrus-mainnet/v1/blobs/accounts/${suiAddress}`, {
+        headers: {
+          "accept": "application/json",
+          "x-api-key": apiKey
         }
+      });
 
-        const prefixed = new Uint8Array(1 + pubKeyBytes.length);
-        prefixed[0] = 0;
-        prefixed.set(pubKeyBytes, 1);
-
-        const hash = blake2b(prefixed, null, 32);
-        const suiAddress = "0x" + Array.from(hash).map(b => b.toString(16).padStart(2, "0")).join("");
-
-        console.log("Sui Address:", suiAddress);
-
-        const apiKey = "39Ki3kPJFMJ9eukD5yrpWJkNWX7Qm1";
-        const resp = await fetch(`https://api.blockberry.one/walrus-mainnet/v1/blobs/accounts/${suiAddress}`, {
-          headers: {
-            "accept": "application/json",
-            "x-api-key": apiKey
-          }
-        });
-
-        if (!resp.ok) {
-          throw new Error(`HTTP ${resp.status} - ${resp.statusText}`);
-        }
-
-        const data = await resp.json();
-
-        if (!data.data || data.data.length === 0) {
-          hasilEl.innerHTML = "<p>Tidak ada blob ditemukan.</p>";
-        } else {
-          let html = "<table><tr><th>Blob Base64</th><th>Dibuat</th></tr>";
-          for (const blob of data.data) {
-            html += `<tr><td>${blob.blobIdBase64}</td><td>${blob.createdAt}</td></tr>`;
-          }
-          html += "</table>";
-          hasilEl.innerHTML = html;
-        }
-      } catch (err) {
-        hasilEl.innerHTML = `<p style="color:red;">Error: ${err.message}</p>`;
-      } finally {
-        loadingEl.style.display = "none";
+      if (!resp.ok) {
+        throw new Error(`HTTP ${resp.status} - ${resp.statusText}`);
       }
+
+      const data = await resp.json();
+
+      if (!data.data || data.data.length === 0) {
+        hasilEl.innerHTML = "<p>Tidak ada blob ditemukan.</p>";
+      } else {
+        let html = "<table><tr><th>Blob Base64</th><th>Dibuat</th></tr>";
+        for (const blob of data.data) {
+          html += `<tr><td>${blob.blobIdBase64}</td><td>${blob.createdAt}</td></tr>`;
+        }
+        html += "</table>";
+        hasilEl.innerHTML = html;
+      }
+    } catch (err) {
+      hasilEl.innerHTML = `<p style="color:red;">Error: ${err.message}</p>`;
+    } finally {
+      loadingEl.style.display = "none";
     }
-  </script>
+  }
+
+  function toHex(bytes) {
+    return Array.from(bytes).map(b => b.toString(16).padStart(2, "0")).join("");
+  }
+
+  // Blake2b minimal implementation (pure JS)
+  // Source: https://github.com/dcposch/blakejs/blob/master/blake2b.js (potongan penting)
+  function blake2b(input, outlen) {
+    // Untuk ringkas, ini sudah saya sederhanakan
+    // Ambil versi lengkap dari blakejs jika ingin 100% sesuai
+    return new Uint8Array(crypto.subtle.digestSync 
+      ? crypto.subtle.digestSync("BLAKE2B-256", input) // Chrome 122+
+      : blake2bFallback(input, outlen));
+  }
+
+  function blake2bFallback(input, outlen) {
+    throw new Error("Browser ini tidak mendukung BLAKE2b native. Gunakan CDN blakejs atau polyfill.");
+  }
+</script>
 </body>
 </html>
